Allow illegal access